funnelocity/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Message__c</fullName>
        <description>Allows user to include a message to the lead recipient.</description>
        <inlineHelpText>Please feel free to include a message to our expert about any issue or opportunity you would like to discuss.</inlineHelpText>
        <label>Lead Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <description>Lists the &quot;Round&quot; or time period in which LinkedSelling will be sending messages per it&apos;s LinkedIn Connection methodology.</description>
        <inlineHelpText>Indicates the period in time when Linked Selling is sending out their contact messages.</inlineHelpText>
        <label>LinkedSelling Round</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Challenge__c</fullName>
        <description>Allows user to input their key sales challenge as a text input up to 256 characters</description>
        <inlineHelpText>Please input a brief statement about the key sales challenge you would like to discuss with our experts.</inlineHelpText>
        <label>Sales Challenge</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Interests__c</fullName>
        <description>This field lists the services the user can select to indicate interest.  It&apos;s multi-select.</description>
        <inlineHelpText>Please select one or more of the items for which you would like more information.</inlineHelpText>
        <label>Service Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Assessment</fullName>
                </value>
                <value>
                    <fullName>Sales Recruiting, Training &amp; Retention</fullName>
                </value>
                <value>
                    <fullName>Prospect Development</fullName>
                </value>
                <value>
                    <fullName>Sales Process Development, Forecasting &amp; CRM Integration</fullName>
                </value>
                <value>
                    <fullName>Funnelocity</fullName>
                </value>
                <value>
                    <fullName>Advisory Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Lead_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Lead Queue</label>
        <queue>Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LinkedSelling_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>LinkedSelling</value>
        </filters>
        <label>LinkedSelling Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>